primer bonus hecho

--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -976,14 +976,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid user\n"
+      "@barackobama: 106780739  followers\n"
      ]
     }
    ],
@@ -1104,9 +1104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['935 (955)', '390 (405)', '365 (360)', '295 (310)', '280 (295)', '205 (215)', '200 (205)', '160 (155)', '125 (125)', '95 (100)']\n"
+     ]
+    }
+   ],
    "source": [
     "#your code\n",
     "langu=[]\n",
@@ -1119,19 +1127,19 @@
     "for e in range(10):\n",
     "    langu.append(lst_elements[e].text)\n",
     "\n",
-    "lst_elements2 = soup.select(\"tr td\")\n",
+    "lst_elements2 = soup.select(\"table:nth-of-type(3) td:nth-child(3)\")\n",
     "\n",
-    "#for e in range(10):\n",
-    " #   native.append(lst_elements2[e].text)    \n",
+    "for e in range(10):\n",
+    "    native.append(lst_elements2[e].text)    \n",
     "\n",
     "#list(map(lambda x: x.findChildren()[0].text.rstrip(), lst_elements2))\n",
     "    \n",
-    "print(langu)"
+    "print(native)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1156,76 +1164,87 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Language</th>\n",
+       "      <th>Native Speakers in millions 2007 (2010)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Mandarin</td>\n",
+       "      <td>935 (955)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Spanish</td>\n",
+       "      <td>390 (405)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>English</td>\n",
+       "      <td>365 (360)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Hindi</td>\n",
+       "      <td>295 (310)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Arabic</td>\n",
+       "      <td>280 (295)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Portuguese</td>\n",
+       "      <td>205 (215)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Bengali</td>\n",
+       "      <td>200 (205)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Russian</td>\n",
+       "      <td>160 (155)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Japanese</td>\n",
+       "      <td>125 (125)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Punjabi</td>\n",
+       "      <td>95 (100)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Language\n",
-       "0    Mandarin\n",
-       "1     Spanish\n",
-       "2     English\n",
-       "3       Hindi\n",
-       "4      Arabic\n",
-       "5  Portuguese\n",
-       "6     Bengali\n",
-       "7     Russian\n",
-       "8    Japanese\n",
-       "9     Punjabi"
+       "     Language Native Speakers in millions 2007 (2010)\n",
+       "0    Mandarin                               935 (955)\n",
+       "1     Spanish                               390 (405)\n",
+       "2     English                               365 (360)\n",
+       "3       Hindi                               295 (310)\n",
+       "4      Arabic                               280 (295)\n",
+       "5  Portuguese                               205 (215)\n",
+       "6     Bengali                               200 (205)\n",
+       "7     Russian                               160 (155)\n",
+       "8    Japanese                               125 (125)\n",
+       "9     Punjabi                                95 (100)"
       ]
      },
-     "execution_count": 113,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "dflangu=pd.DataFrame()\n",
     "dflangu['Language']=langu\n",
-    "dflangu"
+    "dflangu['Native Speakers in millions 2007 (2010)']=native\n",
+    "display(dflangu)"
    ]
   },
   {
@@ -1244,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,18 +1274,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1-What a gift to come across this interview with Julia “Hurricane” Hawkins. I’m as grateful for her life advice as I am impressed by her 100-meter dash time.https://www.nytimes.com/2019/06/20/sports/julia-hawkins-running.html\\xa0…',\n",
+       " '2-Now we’re talking! Congrats to Team USA for moving on, and thanks for continuing to make us all proud. #USAhttps://twitter.com/USWNT/status/1141821855898230785\\xa0…',\n",
+       " '3-On Juneteenth, we celebrate our capacity to make real the promise of our founding, that thing inside each of us that says America is not yet finished, that compels all of us to fight for justice and equality until this country we love more closely aligns with our highest ideals.pic.twitter.com/2XAKRuRrbG',\n",
+       " '4-Outside the Oval Office, I kept a painting of a small crowd huddled around a pocketwatch, waiting for the moment the Emancipation Proclamation took effect. On Juneteenth, we celebrate the anniversary of that news - freedom - reaching slaves in Texas. And something more:pic.twitter.com/kSkLHbfnc3',\n",
+       " '5-This is worth a read: a thought-provoking reminder that education reform isn’t a cure-all. As a supporter of education reform, I agree that fixing educational inequality requires doing more to address the broader, systemic sources of economic inequality.https://www.theatlantic.com/magazine/archive/2019/07/education-isnt-enough/590611/\\xa0…',\n",
+       " '6-Yes we can, Greta. I’m hopeful because of you and all the young people who are fighting to protect the planet. Keep at it.https://twitter.com/GretaThunberg/status/1139894497347813376\\xa0…',\n",
+       " '7-Happy Father’s Day to Charles, one of our @ObamaFoundation Fellows, and all the dads at Fathers’ Uplift. Today, we’re celebrating fathers like these who provide a powerful example—not only for their kids, but for the rest of us, too.pic.twitter.com/GJsxi8DozY']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# your code\n",
     "account='barackobama'\n",
+    "number=7\n",
+    "dev=[]\n",
     "try:\n",
     "    res14 = req.get(url20+account)\n",
     "    soup = BeautifulSoup(res14.text, 'html.parser')\n",
-    "    a= soup.select('span.ProfileNav-value')\n",
-    "    print('@{}:'.format(account), a[2].get('data-count'),' followers')\n",
-    "  \n",
+    "    a= soup.select('div.js-tweet-text-container p')\n",
+    "    for i in range(number):\n",
+    "        dev.append('{}-{}'.format(i+1,a[i].get_text()))\n",
+    "    display(dev)\n",
     "except:\n",
     "    print('Invalid user')"
    ]
