terminado el último. Falta bonus y mejorar algunas soluciones.

--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -1124,118 +1124,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Language</th>\n",
+       "      <th>Native speakers in millions 2017 (2010)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mandarin</td>\n",
+       "      <td>935 (955)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spanish</td>\n",
+       "      <td>390 (405)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>English</td>\n",
+       "      <td>365 (360)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hindi</td>\n",
+       "      <td>295 (310)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arabic</td>\n",
+       "      <td>280 (295)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Portuguese</td>\n",
+       "      <td>205 (215)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Bengali</td>\n",
+       "      <td>200 (205)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Russian</td>\n",
+       "      <td>160 (155)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Japanese</td>\n",
+       "      <td>125 (125)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Punjabi</td>\n",
+       "      <td>95 (100)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['Mandarin Chinese',\n",
-       " 'Spanish language',\n",
-       " 'English language',\n",
-       " 'Hindi language',\n",
-       " None,\n",
-       " 'Arabic language',\n",
-       " 'Portuguese language',\n",
-       " 'Bengali language',\n",
-       " 'Russian language',\n",
-       " 'Japanese language',\n",
-       " 'Punjabi language',\n",
-       " 'German language',\n",
-       " 'Javanese language',\n",
-       " 'Wu Chinese',\n",
-       " 'Malay language',\n",
-       " 'Telugu language',\n",
-       " 'Vietnamese language',\n",
-       " 'Korean language',\n",
-       " 'French language',\n",
-       " 'Marathi language',\n",
-       " 'Tamil language',\n",
-       " 'Urdu',\n",
-       " 'Turkish language',\n",
-       " 'Italian language',\n",
-       " 'Yue Chinese',\n",
-       " 'Thai language',\n",
-       " 'Gujarati language',\n",
-       " 'Jin Chinese',\n",
-       " 'Southern Min',\n",
-       " 'Persian language',\n",
-       " 'Polish language',\n",
-       " 'Pashto language',\n",
-       " 'Kannada language',\n",
-       " 'Xiang Chinese',\n",
-       " 'Malayalam language',\n",
-       " 'Sundanese language',\n",
-       " 'Hausa language',\n",
-       " 'Odia language',\n",
-       " 'Burmese language',\n",
-       " 'Hakka Chinese',\n",
-       " 'Ukrainian language',\n",
-       " 'Bhojpuri language',\n",
-       " 'Tagalog language',\n",
-       " 'Yoruba language',\n",
-       " 'Maithili language',\n",
-       " 'Uzbek language',\n",
-       " 'Sindhi language',\n",
-       " 'Amharic language',\n",
-       " 'Fula language',\n",
-       " 'Romanian language',\n",
-       " 'Oromo language',\n",
-       " 'Igbo language',\n",
-       " 'Azerbaijani language',\n",
-       " 'Awadhi',\n",
-       " 'Gan Chinese',\n",
-       " 'Cebuano language',\n",
-       " 'Dutch language',\n",
-       " 'Kurdish language',\n",
-       " 'Serbo-Croatian',\n",
-       " 'Malagasy language',\n",
-       " 'Saraiki language',\n",
-       " 'Nepali language',\n",
-       " 'Sinhalese language',\n",
-       " 'Chittagonian language',\n",
-       " 'Zhuang languages',\n",
-       " 'Khmer language',\n",
-       " 'Turkmen language',\n",
-       " 'Assamese language',\n",
-       " 'Madurese language',\n",
-       " 'Somali language',\n",
-       " 'Marwari language',\n",
-       " 'Magahi language',\n",
-       " 'Haryanvi language',\n",
-       " 'Hungarian language',\n",
-       " 'Chhattisgarhi language',\n",
-       " 'Greek language',\n",
-       " 'Chewa language',\n",
-       " 'Deccan language',\n",
-       " 'Akan language',\n",
-       " 'Kazakh language',\n",
-       " 'Northern Min',\n",
-       " 'Wikipedia:Disputed statement',\n",
-       " 'Talk:List of languages by number of native speakers',\n",
-       " 'Sylheti language',\n",
-       " 'Zulu language',\n",
-       " 'Czech language',\n",
-       " 'Kinyarwanda',\n",
-       " 'Dhundari language',\n",
-       " 'Haitian Creole',\n",
-       " 'Eastern Min',\n",
-       " 'Ilocano language',\n",
-       " 'Quechua languages',\n",
-       " 'Kirundi',\n",
-       " 'Swedish language',\n",
-       " 'Hmong language',\n",
-       " 'Shona language',\n",
-       " 'Uyghur language',\n",
-       " 'Hiligaynon language',\n",
-       " 'Mossi language',\n",
-       " 'Xhosa language',\n",
-       " 'Belarusian language',\n",
-       " 'Balochi language',\n",
-       " 'Konkani language']"
+       "     Language Native speakers in millions 2017 (2010)\n",
+       "0    Mandarin                               935 (955)\n",
+       "1     Spanish                               390 (405)\n",
+       "2     English                               365 (360)\n",
+       "3       Hindi                               295 (310)\n",
+       "4      Arabic                               280 (295)\n",
+       "5  Portuguese                               205 (215)\n",
+       "6     Bengali                               200 (205)\n",
+       "7     Russian                               160 (155)\n",
+       "8    Japanese                               125 (125)\n",
+       "9     Punjabi                                95 (100)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,8 +1233,9 @@
     "languages=pd.DataFrame()\n",
     "table=soup12.select('table')[2]\n",
     "\n",
-    "lang=[l.get(\"title\") for s in table.select('tr') for l in s.select('td:nth-child(2) a:nth-child(1)')]\n",
-    "lang\n",
+    "languages[\"Language\"]=[l.get_text() for s in table.select('tr') for l in s.select('td:nth-child(2) b a')][:10]\n",
+    "languages[\"Native speakers in millions 2017 (2010)\"]=[l.get_text() for s in table.select('tr') for l in s.select('td:nth-child(3)')][:10]\n",
+    "languages\n",
     "\n",
     "\n"
    ]
@@ -1269,22 +1256,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise \n",
     "# You will need to add the account credentials to this url\n",
-    "url = 'https://twitter.com/'"
+    "url13 = 'https://twitter.com/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "invalid user\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "user=\"elonmusk\"\n",
+    "try:\n",
+    "    res13 = req.get(url13+user)\n",
+    "    soup13 = BeautifulSoup(res13.text, 'html.parser')\n",
+    "\n",
+    "    tweets = soup13.select('li[class=\"js-stream-item stream-item stream-item\" p]')\n",
+    "    display(tweets)\n",
+    "except:\n",
+    "    print(\"invalid user\")"
    ]
   },
   {
