--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests as req\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "# from pprint import pprint\n",
@@ -66,21 +66,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/developers'"
+    "url = 'https://github.com/trending/developers'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n\\n\\n\\n\\n<!DOCTYPE html>\\n<html lang=\"en\">\\n  <head>\\n    <meta charset=\"utf-8\">\\n  <link rel=\"dns-prefetch\" href=\"https://github.githubassets.com\">\\n  <link rel=\"dns-prefetch\" href=\"https://avatars0.githubusercontent.com\">\\n  <link rel=\"dns-prefetch\" href=\"https://avatars1.githubusercontent.com\">\\n  <link rel=\"dns-prefetch\" href=\"https://avatars2.githubusercontent.com\">\\n  <link rel=\"dns-prefetch\" href=\"https://avatars3.githubusercontent.com\">\\n  <link rel=\"dns-prefetch\" href=\"https://github-cloud.s3.amazonaws.com\">\\n  <link rel=\"dns-prefetch\" href=\"https://user-images.githubusercontent.com/\">\\n\\n\\n\\n  <link crossorigin=\"anonymous\" media=\"all\" integrity=\"sha512-67V2J9Se2CifJlftk9/cExHGvxd7N9b9EdGnQEpszu99Ogeecilu9jIDxoCkx3zNLfB9ArraXW0J03qyVmN0Uw==\" rel=\"stylesheet\" href=\"https://github.githubassets.com/assets/frameworks-e7318add1f7e055d040edb0f75aaa0ba.css\" />\\n  <link crossorigin=\"anonymous\" media=\"all\" integrity=\"sha512-MRlTIqIyb8caK5+o8llXVntXovciHyAM4qE3kWU2S7SIjAPDxYp4mE0jQp4kP5UYegy+lG9y1I6Vlsdz'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "#your code\n",
+    "r = req.get(url)\n",
+    "r.text[:1000]"
    ]
   },
   {
@@ -134,11 +147,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BeautifulSoup' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5639846d755b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#your code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msoup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'html.parser'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mnames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'h1.h3.lh-condensed'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BeautifulSoup' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "#your code\n",
+    "soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "\n",
+    "names = soup.select('.h3.lh-condensed')\n",
+    "names[2:5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Peter Bourgon /peterbourgon',\n",
+       " 'Pierre Krieger /tomaka',\n",
+       " 'Carl Lerche /carllerche',\n",
+       " 'Matt Layher /mdlayher',\n",
+       " 'Claudio Sanches /claudiosanches',\n",
+       " 'Jeremy Long /jeremylong',\n",
+       " 'Eddy Verbruggen /EddyVerbruggen',\n",
+       " 'Kyle /kylekatarnls',\n",
+       " 'Jeff Geerling /geerlingguy',\n",
+       " 'Kirk Wight /kwight',\n",
+       " 'Daniel Shiffman /shiffman',\n",
+       " '子骅 /luin',\n",
+       " 'Bastian Köcher /bkchr',\n",
+       " 'Brendan Forster /shiftkey',\n",
+       " 'Benjamin Eberlei /beberlei',\n",
+       " 'Tim Griesser /tgriesser',\n",
+       " 'Sascha Grunert /saschagrunert',\n",
+       " 'Juliette /jrfnl',\n",
+       " 'Carlos Alexandro Becker /caarlos0',\n",
+       " 'John Blackbourn /johnbillion',\n",
+       " 'Harry Wolff /hswolff',\n",
+       " 'Yoni Goldberg /i0natan',\n",
+       " 'Felix Angelov /felangel',\n",
+       " 'Rob Moran /thegecko',\n",
+       " 'Ayrat Badykov /ayrat555']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rel_names = [' '.join((elem.text, elem.a.get('href'))) for elem in names]\n",
+    "rel_names"
    ]
   },
   {
@@ -152,21 +226,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/python?since=daily'"
+    "url_1 = 'https://github.com/trending/python?since=daily'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' wtfpython-cn',\n",
+       " ' you-get',\n",
+       " ' bokeh',\n",
+       " ' cve-2019-1040-scanner',\n",
+       " ' electrum',\n",
+       " ' documentation',\n",
+       " ' dask',\n",
+       " ' flair',\n",
+       " ' Sooty',\n",
+       " ' nl2sql_baseline',\n",
+       " ' compose',\n",
+       " ' wtfpython',\n",
+       " ' Mask_RCNN',\n",
+       " ' scikit-plot',\n",
+       " ' machine-learning-course',\n",
+       " ' USTC-Course',\n",
+       " ' scrapydweb',\n",
+       " ' sigma',\n",
+       " ' locust',\n",
+       " ' MASS',\n",
+       " ' labelImg',\n",
+       " ' tvm',\n",
+       " ' PySimpleGUI',\n",
+       " ' google-research',\n",
+       " ' TDTChannels']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "#your code\n",
+    "info = req.get(url_1)\n",
+    "soup_1 = BeautifulSoup(info.text, 'html.parser')\n",
+    "repo = soup_1.select('h1.h3 a')\n",
+    "lista = []\n",
+    "for e in repo: \n",
+    "    lista.append(e.text.strip())\n",
+    "\n",
+    "\n",
+    "repos = [i.split(\"/\")[1] for i in lista]\n",
+    "repos"
    ]
   },
   {
@@ -178,21 +297,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 107,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://upload.wikimedia.org/wikipedia/en/thumb/e/e7/Cscr-featured.svg/20px-Cscr-featured.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/en/thumb/1/1b/Semi-protection-shackle.svg/20px-Semi-protection-shackle.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Walt_Disney_1946.JPG/220px-Walt_Disney_1946.JPG',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Walt_Disney_1942_signature.svg/150px-Walt_Disney_1942_signature.svg.png']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#your code"
+    "url_2 = 'https://en.wikipedia.org/wiki/Walt_Disney'\n",
+    "image = req.get(url_2)\n",
+    "\n",
+    "soup_2 = BeautifulSoup(image.text, 'html.parser')\n",
+    "\n",
+    "jpg = soup_2.select('img')\n",
+    "\n",
+    "lista_1 = []\n",
+    "for e in jpg:\n",
+    "    lista_1.append(e[\"src\"])\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "b = []\n",
+    "for e in lista_1:\n",
+    "    b.append(\"https:\"+ e)\n",
+    "\n",
+    "\n",
+    "b[:4]\n",
+    "    \n",
+    "\n",
+    "#Faltaria pasar los links a imágenes, pero no se como, intente de todo"
    ]
   },
   {
@@ -204,21 +351,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://en.wikipedia.org/wiki/Python' "
+    "url_3 ='https://en.wikipedia.org/wiki/Python' \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-119-2d1a91fcf0ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mlista_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mjpg\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"www\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "#your code\n",
+    "link = req.get(url_3)\n",
+    "sopa = BeautifulSoup(link.text, 'html.parser')\n",
+    "\n",
+    "link_1 = soup_2.select('ul li a')\n",
+    "\n",
+    "lista_2 = []\n",
+    "for e in jpg:\n",
+    "    e.split(\"www\")\n",
+    "    \n",
+    "display(lista_2)\n"
    ]
   },
   {
@@ -230,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
