Corrigiendo algunos fallos pendientes

--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,14 +1148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('English', '5878000'), ('æ\\x97¥æ\\x9c¬èª\\x9e', '1155000'), ('EspaÃ±ol', '1528000'), ('Deutsch', '2314000'), ('Ð\\xa0Ñ\\x83Ñ\\x81Ñ\\x81ÐºÐ¸Ð¹', '1551000'), ('FranÃ§ais', '2116000'), ('Italiano', '1535000'), ('ä¸\\xadæ\\x96\\x87', '1062000'), ('PortuguÃªs', '1008000'), ('Polski', '1342000')]\n"
+      "[('English', '5878000'), ('日本語', '1155000'), ('Español', '1528000'), ('Deutsch', '2314000'), ('Русский', '1551000'), ('Français', '2116000'), ('Italiano', '1535000'), ('中文', '1062000'), ('Português', '1008000'), ('Polski', '1342000')]\n"
      ]
     }
    ],
@@ -1169,7 +1169,7 @@
     "languages = wikipedias.select('div.central-featured-lang strong')\n",
     "articles = wikipedias.select('div.central-featured-lang bdi')\n",
     "\n",
-    "language = [e.text.strip() for e in languages]\n",
+    "language = [e.text.strip().encode('latin1').decode('utf8') for e in languages]\n",
     "article = [e.text.strip().replace(\"\\xa0\",\"\")[:-1] for e in articles]\n",
     "\n",
     "# Tengo que buscar como decodificarlo\n",
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1756,42 +1756,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"coord\":{\"lon\":-6,\"lat\":37.39},\"weather\":[{\"id\":800,\"main\":\"Clear\",\"description\":\"clear sky\",\"icon\":\"01d\"}],\"base\":\"stations\",\"main\":{\"temp\":28.91,\"pressure\":1015,\"humidity\":51,\"temp_min\":27,\"temp_max\":31},\"visibility\":10000,\"wind\":{\"speed\":4.6,\"deg\":250},\"clouds\":{\"all\":0},\"dt\":1561663263,\"sys\":{\"type\":1,\"id\":6424,\"message\":0.008,\"country\":\"ES\",\"sunrise\":1561611902,\"sunset\":1561664923},\"timezone\":7200,\"id\":6361046,\"name\":\"Seville\",\"cod\":200}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'clouds'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-303-15974e4cc2d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweather\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweather\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"clouds\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m '''\n\u001b[1;32m     10\u001b[0m report = 'City: {}\\nTemperature: {}\\nWind: {}\\nDescription: {}\\nWeather: {}'.format(city,weather[\"main\"][\"temp\"],\\\n",
-      "\u001b[0;32m/home/alfonso/.local/lib/python3.7/site-packages/bs4/element.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1014\u001b[0m         \"\"\"tag[key] returns the value of the 'key' attribute for the tag,\n\u001b[1;32m   1015\u001b[0m         and throws an exception if it's not there.\"\"\"\n\u001b[0;32m-> 1016\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattrs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1017\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1018\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__iter__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'clouds'"
+      "City: Sevilla\n",
+      "Temperature: 25.58\n",
+      "Wind: 0.5\n",
+      "Description: clear sky\n",
+      "Weather: Clear\n"
      ]
     }
    ],
    "source": [
     "# your code\n",
+    "import json\n",
     "\n",
     "data17 = rq.get(url)\n",
     "\n",
     "weather = BeautifulSoup(data17.text, 'html.parser')\n",
     "\n",
-    "print(weather)\n",
-    "print(weather[\"clouds\"])\n",
-    "'''\n",
+    "weather = json.loads(str(weather))\n",
+    "\n",
     "report = 'City: {}\\nTemperature: {}\\nWind: {}\\nDescription: {}\\nWeather: {}'.format(city,weather[\"main\"][\"temp\"],\\\n",
-    "            weather[\"wind\"][\"speed\"], weather[\"weather\"][\"description\"], weather[\"weather\"][\"main\"])\n",
-    "'''\n",
+    "            weather[\"wind\"][\"speed\"], weather[\"weather\"][0][\"description\"], weather[\"weather\"][0][\"main\"])\n",
+    "\n",
     "print(report)"
    ]
   },
